package com.company.observer;

public interface DisplayElement {
    public void display();
}
